--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,12 @@ services:
       - ADMIN_IDS=${ADMIN_IDS}
       - CHANNEL_USERNAME=${CHANNEL_USERNAME}
       - DB_URL=${DB_URL}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_DB=${REDIS_DB}
     depends_on:
       - db
+      - redis
   db:
     image: postgres:13
     environment:
@@ -17,5 +21,12 @@ services:
       POSTGRES_DB: my_quest_bot
     volumes:
       - db_data:/var/lib/postgresql/data
+  redis:
+    image: redis:6-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 volumes:
   db_data:
+  redis_data:
